--- a/2016/events.yaml
+++ b/2016/events.yaml
@@ -119,8 +119,8 @@
     
   - id: 2016.8
     timeslot: 20:00 - 20:45
-    title: 
-    speaker: 
+    title: t.b.a
+    speaker: Fanie Reynders
     description: 
     videoId: 
     slidesId: 
