--- a/2016/events.yaml
+++ b/2016/events.yaml
@@ -119,9 +119,9 @@
     
   - id: 2016.8
     timeslot: 20:00 - 20:45
-    title: t.b.a
-    speaker: Fanie Reynders
-    description: 
+    title: Highly Sensitive People
+    speaker: Chris Nieuwlaat
+    description: Depending on the crowd it'll be a more or less interactive Talk about what HSP is, what it is to be HSP, which positive and negative aspects there are when you are HSP and how HSPs can be an asset for your team and or company, and what you should do to cultivate them and flourish.
     videoId: 
     slidesId: 
     completed: false
