--- a/2016/speakers.yaml
+++ b/2016/speakers.yaml
@@ -39,6 +39,14 @@
   blogUrl: 
   imageUrl: https://media.licdn.com/media/p/3/005/063/367/0d3f3a8.jpg
   bio: A beach bum living in the urban jungle, Software Developer with experience from mainframe (PL/1) to Java Enterprise and actually enjoys writing tests
+
+- name: Chris Nieuwlaat
+  title: Polyglot Developer
+  twitter: krizzje
+  blogUrl: http://christiaannieuwlaat.nl
+  imageUrl: https://pbs.twimg.com/profile_images/1900881934/cestmoi.jpg
+  bio: "PHP evangelist and polyglot developer during the day, loving dad and Allround deejay at night. In Both my personal as professional life I try to help others be or become the best version of themselves they can be. I'm a highly sensitive person and blessed with the possibility to learn a lot things quite fast."
+  
   
   
   
