--- a/2016/events.yaml
+++ b/2016/events.yaml
@@ -98,7 +98,7 @@
     
 - date: 22 Sep 2016 19:00
   title: September Meetup
-  description: Xamarin & ALM
+  description: Xamarin, ALM & Highly Sensitive People
   registerUrl: 
   
   sessions:
