--- a/2016/events.yaml
+++ b/2016/events.yaml
@@ -99,7 +99,7 @@
 - date: 22 Sep 2016 19:00
   title: September Meetup
   description: Xamarin, ALM & Highly Sensitive People
-  registerUrl: 
+  registerUrl: https://www.meetup.com/fixxup/events/233443521/
   
   sessions:
   - timeslot: 18:45 - 19:00
@@ -109,7 +109,7 @@
     timeslot: 19:00 - 19:45
     title: "ALM + Your Xamarin app: The circle of life"
     speaker: Gerald Versluis
-    videoId: 
+    videoId: "zvTWanvmXSo"
     description: Tijdens deze sessie volgen we onze app tijdens een cruciaal deel van zijn leven; het moment dat 'ie uit huis gaat. Om dit zo soepel mogelijk te doen verlopen maken we gebruik van Continuous Integration en deployment door middel van VSTS, Bitrise, TestCloud, HockeyApp en Insights.
     slidesId: 
     completed: false
@@ -122,7 +122,7 @@
     title: Highly Sensitive People
     speaker: Chris Nieuwlaat
     description: A more or less interactive Talk about what HSP is, what it is to be HSP, which positive and negative aspects there are when you are HSP and how HSPs can be an asset for your team and or company, and what you should do to cultivate them and flourish.
-    videoId: 
+    videoId: "ZnCwkGqjrAU"
     slidesId: 
     completed: false
 
