title, description and URL update

--- a/2016/events.yaml
+++ b/2016/events.yaml
@@ -96,10 +96,10 @@
   - timeslot: 20:45 - 21:00
     title: Borrel
     
-- date: 22 Sep 2016 19:00
-  title: September Meetup
-  description: Xamarin, ALM & Highly Sensitive People
-  registerUrl: https://www.meetup.com/fixxup/events/233443521/
+- date: 17 Nov 2016 19:00
+  title: November Meetup
+  description: Latest trends in Online Marketing & Test Pyramide explained
+  registerUrl: https://www.meetup.com/fixxup/events/234827775/
   
   sessions:
   - timeslot: 18:45 - 19:00
