added RJ Kuyper as a speaker

--- a/2016/speakers.yaml
+++ b/2016/speakers.yaml
@@ -47,6 +47,12 @@
   imageUrl: https://pbs.twimg.com/profile_images/1900881934/cestmoi.jpg
   bio: "PHP evangelist and polyglot developer during the day, loving dad and Allround deejay at night. In Both my personal as professional life I try to help others be or become the best version of themselves they can be. I'm a highly sensitive person and blessed with the possibility to learn a lot things quite fast."
   
+- name: Robert-Jan Kuyper
+  title: Front-end Developer
+  twitter: 
+  blogUrl: 
+  imageUrl: https://media.licdn.com/media/p/1/005/03d/383/2072802.jpg
+  bio: My name is Robert-Jan Kuyper, front-end developer generating business and traffic to applications and websites using the latest trends in the field of UX, marketing, front-end code, online advertising, SEO and data analytics.
   
   
   
