--- a/2016/speakers.yaml
+++ b/2016/speakers.yaml
@@ -54,5 +54,10 @@
   imageUrl: https://media.licdn.com/media/p/1/005/03d/383/2072802.jpg
   bio: My name is Robert-Jan Kuyper, front-end developer generating business and traffic to applications and websites using the latest trends in the field of UX, marketing, front-end code, online advertising, SEO and data analytics.
   
-  
+- name: Arjon Kruisselbrink 
+  title: Test goeroe en Owner 
+  twitter: 
+  blogUrl: 
+  imageUrl: https://pbs.twimg.com/profile_images/2243791858/arjon.jpg
+  bio:  Arjon is een test goeroe en zeer ervaren op het gebied van functioneel en performance testen, ook de eigenaar van dé Keyword Driven Testing solution op basis van Image Based Testing, KeyLib
   
